# test

./: README.md  pyproject.toml  setup.py  web2md-building-protocol.md  web2md-generated-output.md  windows_setup.py
DEBUG/: 1. vitepress_dev_guide_i18n_20250324_100836.html  1. vitepress_dev_guide_i18n_20250324_100836.json  2. imfing_github_io_hextra_docs_guide_latex_20250324_102150.html  2. imfing_github_io_hextra_docs_guide_latex_20250324_102150.json  3. resoltico_com_en_tools_web2json_20250324_102741.html  3. resoltico_com_en_tools_web2json_20250324_102741.json  3. resoltico_com_en_tools_web2json_20250324_151112.json
dataset/: dataset-comprehensive-html5-demo-clean-source.html  dataset-comprehensive-html5-demo-downloaded-via-curl-from-website.html  web2md-output-2025-04-16_T07-57-02_+0300.md  web2md-output-2025-04-16_T14-00-05_+0300.md  web2md-output-2025-04-17_T02-38-40_+0300.md  web2md-output.md
datasets/: No.1 - primary source.mdx  No.1 - resulting output via Safari.html  No.1 - resulting output via web2json.json  No.2 - resulting output via Safari.html  No.2 - resulting output via web2json.json  No.3 - custom created json.json  No.3 - primary source.html  No.3 - resulting output via web2json.json  dataset-comprehensive-html5-demo.json  dataset-comprehensive-html5-demo.md  final-web2json-protocol.md  output-generated-by-web2json.json  output-via-web2json.json  web2md-generated-file.md  web2md-protocol.md
docs/: web2md-project-rules.md  web2md-project-structure.md
html-ast-transform/: .eslint.json  package.json  readme.md  tsconfig.json  vitest.config.ts
(+392 files in other folders)
