[tool.poetry]
name = "web2json"
version = "0.4.0"
description = "A tool to transform web pages into structured JSON"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "web2json"}]

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.13.3"
aiohttp = "^3.11.16"
pydantic = "^2.11.1"
typer = "^0.15.2"
rich = "^14.0.0"
lxml = "^5.3.1"
structlog = "^25.2.0"
cachetools = "^5.5.2"
html2text = "^2024.2.26"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.0"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.2"

[tool.poetry.scripts]
web2json = "web2json.__main__:main"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "B", "I", "N", "W", "C90"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
